--- a/src/components/Collectibles/Collectibles.css
+++ b/src/components/Collectibles/Collectibles.css
@@ -13,7 +13,6 @@
   /* flex-direction: column; */
   border-radius: 24px;
   /* border: 1px solid var(--Borders-01, #2d2d2d); */
-  padding: 0px 25px 27px 16px;
 }
 
 .collectibles-rounded-image {
@@ -24,8 +23,8 @@
 }
 
 .collectible-heading {
-  margin-top: 32px;
-  margin-bottom: 24px;
+  /* margin-top: 32px;
+  margin-bottom: 24px; */
   font-size: 24px;
   color: white;
 }
@@ -34,12 +33,11 @@
   display: flex;
   width: 40px;
   height: 40px;
-  padding: 10px;
   justify-content: center;
   align-items: center;
   border-radius: 8px;
   border: 1px solid var(--Button-Primary, #f4f85a);
-  margin-top: 20px;
+  /* margin-top: 20px; */
 }
 
 .collectible-right {
