--- a/src/components/Social/Social.css
+++ b/src/components/Social/Social.css
@@ -36,7 +36,7 @@
 
 .box-text2 {
   margin: 0px;
-  font-family: Aeonik TRIAL;
+  /* font-family: Aeonik TRIAL; */
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
