--- a/src/pages/Nft/NftComponent.css
+++ b/src/pages/Nft/NftComponent.css
@@ -1,4 +1,4 @@
-/* .App {
+.Nft-container {
   background-color: #1B1B17;
   height: fit-content;
   display: flex;
@@ -17,11 +17,11 @@
   display: flex;
   flex-direction: column;
   width: 60%;
-  padding: 20px;
+  padding: 15px;
 }
 
   @media screen and (max-width: 900px) {
-    .App {
+    .Nft-container {
       background-color: #1B1B17;
       height: fit-content;
       display: flex;
@@ -40,7 +40,7 @@
 
   @media screen and (max-width: 600px) {
 
-    .App {
+    .Nft-container {
       font-size: 14px;
     }
     .leftcontainer {
@@ -50,5 +50,5 @@
     
     }
 
-  } */
+  }
 
