--- a/src/components/DefaultBrowser/DefaultBrowser.css
+++ b/src/components/DefaultBrowser/DefaultBrowser.css
@@ -31,29 +31,24 @@
 
 .defaultBrowser-main-heading {
   color: var(--fonts-icons-01, var(--text-01, #fffff5));
-
-  /* Onboarding/Titles/H1 Reg 40 - 120% */
   /* font-family: Aeonik TRIAL; */
   font-size: 40px;
   font-style: normal;
   font-weight: 400;
-  line-height: 120%; /* 48px */
+  line-height: 120%;
   letter-spacing: -0.8px;
   max-width: 600px;
-  /* display: flex; */
   text-align: center;
   padding: 16px 0px;
 }
 .defaultBrowser-text {
   color: var(--fonts-icons-02, var(--text-02, #a3a393));
   text-align: center;
-
-  /* Onboarding/Body/Body L Reg 16 - 120% */
   /* font-family: Aeonik TRIAL; */
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
-  line-height: 120%; /* 19.2px */
+  line-height: 120%;
   letter-spacing: -0.304px;
   max-width: 591px;
 }
@@ -90,13 +85,11 @@
 .defaultbrowser-checbox-text {
   color: var(--fonts-icons-01, var(--text-01, #fffff5));
   text-align: center;
-
-  /* Onboarding/Titles/H2 Reg 24 - 120% */
   /* font-family: Aeonik TRIAL; */
   font-size: 24px;
   font-style: normal;
   font-weight: 400;
-  line-height: 150%; /* 36px */
+  line-height: 150%;
   letter-spacing: -0.456px;
 }
 .defuaultbrowser-button {
@@ -109,13 +102,11 @@
   border-radius: 16px;
   background: var(--Primary, #f4f85a);
   color: var(--fonts-icons-inverse, var(--background, #121212));
-
-  /* Onboarding/Body/Body L Bold 16 - 120% */
   /* font-family: Aeonik TRIAL; */
   font-size: 16px;
   font-style: normal;
   font-weight: 700;
-  line-height: 120%; /* 19.2px */
+  line-height: 120%;
   letter-spacing: -0.304px;
 }
 
