--- a/src/components/Provider/Provider.css
+++ b/src/components/Provider/Provider.css
@@ -1,103 +1,104 @@
-.provider-main-comntainer{
-    height: 100vh;
-    background: var(--background, #121212);
+.provider-main-comntainer {
+  height: 100vh;
+  background: var(--background, #121212);
 }
 
-.provider-side-ellipse{
-    width: 335px;
-    height: 376px;
-    flex-shrink: 0;
-    border-radius: 576px;
-opacity: 0.4;
-background: var(--Bg-gradients-primary, linear-gradient(180deg, #F4F85A 0%, #FEFFCF 100%));
-filter: blur(100px);
-position: absolute;
-z-index: 0;
+.provider-side-ellipse {
+  width: 335px;
+  height: 376px;
+  flex-shrink: 0;
+  border-radius: 576px;
+  opacity: 0.4;
+  background: var(
+    --Bg-gradients-primary,
+    linear-gradient(180deg, #f4f85a 0%, #feffcf 100%)
+  );
+  filter: blur(100px);
+  position: absolute;
+  z-index: 0;
 }
 
-.provider-text-container-wrapper{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 60.9vh;
-    flex-direction: column;
-    padding-left: 289px;
+.provider-text-container-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60.9vh;
+  flex-direction: column;
+  padding-left: 289px;
 }
 
-.provider-main-heading{
-    color: var(--fonts-icons-01, var(--text-01, #FFFFF5));
-
-/* Onboarding/Titles/H1 Reg 40 - 120% */
-/* font-family: Aeonik TRIAL; */
-font-size: 40px;
-font-style: normal;
-font-weight: 400;
-line-height: 120%; /* 48px */
-letter-spacing: -0.8px;
-padding-top: 16px;
+.provider-main-heading {
+  color: var(--fonts-icons-01, var(--text-01, #fffff5));
+  /* font-family: Aeonik TRIAL; */
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%;
+  letter-spacing: -0.8px;
+  padding-top: 16px;
 }
-.provider-text{
-    color: var(--fonts-icons-02, var(--text-02, #A3A393));
-text-align: center;
-/* font-family: Aeonik TRIAL; */
-font-size: 16px;
-font-style: normal;
-font-weight: 400;
-padding-top: 16px;
-padding-bottom: 40px;
-
+.provider-text {
+  color: var(--fonts-icons-02, var(--text-02, #a3a393));
+  text-align: center;
+  /* font-family: Aeonik TRIAL; */
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  padding-top: 16px;
+  padding-bottom: 40px;
 }
 
-.provider-data-container{
-    display: flex;
-    padding: 16px 26px;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 16px;
-    flex: 1 0 0;
-    align-self: stretch;
-    border-radius: 16px;
-border: 1px solid var(--Borders-01, #2D2D2D);
+.provider-data-container {
+  display: flex;
+  padding: 16px 26px;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 16px;
+  flex: 1 0 0;
+  align-self: stretch;
+  border-radius: 16px;
+  border: 1px solid var(--Borders-01, #2d2d2d);
+  cursor: pointer;
 }
 
-.provider-data-container-heading{
-    color: var(--fonts-icons-01, var(--text-01, #FFFFF5));
-/* text-align: center; */
-/* font-family: Aeonik TRIAL; */
-font-size: 24px;
-font-style: normal;
-font-weight: 400;
-line-height: 150%; /* 36px */
-letter-spacing: -0.456px;
+.provider-data-container-heading {
+  color: var(--fonts-icons-01, var(--text-01, #fffff5));
+  /* font-family: Aeonik TRIAL; */
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+  letter-spacing: -0.456px;
 }
-.provider-data-container-about{
-    color: var(--fonts-icons-02, var(--text-02, #A3A393));
-
-/* Onboarding/Body/Body L Reg 16 - 120% */
-/* font-family: Aeonik TRIAL; */
-font-size: 16px;
-font-style: normal;
-font-weight: 400;
-line-height: 120%; /* 19.2px */
-letter-spacing: -0.304px;
-max-width: 210px;
+.provider-data-container-about {
+  color: var(--fonts-icons-02, var(--text-02, #a3a393));
+  /* font-family: Aeonik TRIAL; */
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%; /* 19.2px */
+  letter-spacing: -0.304px;
+  max-width: 210px;
 }
 
-.provider-rightbottom-side-ellipse{
-    position: absolute;
-    width: 204px;
-height: 205px;
-flex-shrink: 0;
-fill: var(--Bg-gradients-primary, linear-gradient(180deg, #F4F85A 0%, #FEFFCF 100%));
-opacity: 0.4;
-filter: blur(100px);
-right: 0px;
-bottom: 0px;
-background-color: #F4F85A;
+.provider-rightbottom-side-ellipse {
+  position: absolute;
+  width: 204px;
+  height: 205px;
+  flex-shrink: 0;
+  fill: var(
+    --Bg-gradients-primary,
+    linear-gradient(180deg, #f4f85a 0%, #feffcf 100%)
+  );
+  opacity: 0.4;
+  filter: blur(100px);
+  right: 0px;
+  bottom: 0px;
+  background-color: #f4f85a;
 }
 
 @media screen and (max-width: 900px) {
-    .provider-text-container-wrapper{
-        padding-left: 0px;
-    }
+  .provider-text-container-wrapper {
+    padding-left: 0px;
+  }
 }
