--- a/src/components/AccountSuccessfullyConnected/AccountSuccessfullyConnected.css
+++ b/src/components/AccountSuccessfullyConnected/AccountSuccessfullyConnected.css
@@ -63,6 +63,7 @@
   gap: 10px;
   border-radius: 16px;
   background: var(--Primary, #f4f85a);
+  cursor: pointer;
 }
 
 @media screen and (max-width: 900px) {
