--- a/src/components/CreateWalletPassword/CreateWalletPassword.css
+++ b/src/components/CreateWalletPassword/CreateWalletPassword.css
@@ -118,6 +118,7 @@
   font-weight: 700;
   line-height: 120%;
   letter-spacing: -0.304px;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 900px) {
