--- a/src/components/ImportWalletSeed.js/ImportWalletSeed.css
+++ b/src/components/ImportWalletSeed.js/ImportWalletSeed.css
@@ -56,6 +56,7 @@
   gap: 10px;
   border-radius: 16px;
   border: 1px solid var(--fonts-icons-01, #fffff5);
+  cursor: pointer;
 }
 
 .ImportWalletSeed-text {
@@ -103,6 +104,7 @@
   font-weight: 700;
   line-height: 120%;
   letter-spacing: -0.304px;
+  cursor: pointer;
 }
 .ImportWalletSeedButtonUnderText {
   color: var(--fonts-icons-01, var(--text-01, #fffff5));
