--- a/src/pages/SignUp/SignUpPage.css
+++ b/src/pages/SignUp/SignUpPage.css
@@ -58,6 +58,7 @@
   font-size: 16px;
   font-weight: 700;
   margin-right: 16px;
+  cursor: pointer;
 }
 
 #signup-page-try-must {
@@ -69,6 +70,7 @@
   font-size: 16px;
   font-weight: 700;
   width: 194px;
+  cursor: pointer;
 }
 
 #signUp-page-button {
