--- a/src/pages/SignUp/SignUpPage.css
+++ b/src/pages/SignUp/SignUpPage.css
@@ -83,6 +83,7 @@
   color: #fffff5;
   font-size: 12px;
   padding-bottom: 130px;
+  cursor: pointer;
 }
 #signUp-page-bottom-text {
   color: #fffff5;
