--- a/html files/MusterSetting/Setting/component/ManageCertificate/ManageCertificate.html
+++ b/html files/MusterSetting/Setting/component/ManageCertificate/ManageCertificate.html
@@ -3,12 +3,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sidebar Example</title>
-    <link rel="stylesheet" href="index.css" />
     <link
       rel="stylesheet"
-      href="/component/ManageCertificate/ManageCertificate.css"
+      href="./ManageCertificate.css"
     />
-    <link rel="stylesheet" href="/index.css" />
+    <link rel="stylesheet" href="../../index.css" />
   </head>
   <body>
     <div class="container">
@@ -18,7 +17,7 @@
             <img
               width="80px"
               height="15.1px"
-              src="/assets/musterlogwithtext.svg"
+              src="../../assets/musterlogwithtext.svg"
               alt="logo"
             />
           </div>
@@ -32,15 +31,15 @@
                 <div style="display: flex; gap: 8px; align-items: center">
                   <img
                     style="padding: 2px"
-                    src="/assets/settingIcon.svg"
+                    src="../../assets/settingIcon.svg"
                     alt="settingIcon"
                   />
                   Settings
                 </div>
-                <img src="/assets/dropdown.svg" alt="dro" />
+                <img src="../../assets/dropdown.svg" alt="dro" />
               </button>
               <div class="dropdown-container" id="dropdown1">
-                <a href="/index.html">Child 1.1</a>
+                <a href="#">Child 1.1</a>
                 <a href="#">Child 1.2</a>
                 <a href="#" onclick="">Child 1.3</a>
               </div>
@@ -55,12 +54,12 @@
                   <img
                     width="20"
                     height="20"
-                    src="/assets/userunfilled.svg"
+                    src="../../assets/userunfilled.svg"
                     alt="settingIcon"
                   />
                   History
                 </div>
-                <img src="/assets/dropdown.svg" alt="dro" />
+                <img src="../../assets/dropdown.svg" alt="dro" />
               </button>
               <div class="dropdown-container" id="dropdown2">
                 <a href="#"
@@ -81,12 +80,12 @@
                 <img
                   width="24"
                   height="24"
-                  src="/assets/userFilled.svg"
+                  src="../../assets/userFilled.svg"
                   alt="settingIcon"
                 />
                 My urbit ID
               </div>
-              <img src="/assets/dropdown.svg" alt="dro" />
+              <img src="../../assets/dropdown.svg" alt="dro" />
             </button>
             <div class="dropdown-container" id="dropdown3">
               <a href="#">Child 3.2</a>
@@ -109,9 +108,9 @@
       >
         <div style="display: flex; padding-bottom: 50px;">
         <div class="manageCrtificateBackIcon">
-          <img src="/assets/backArrow.svg" alt="setting" />
+          <img src="../../assets/backArrow.svg" alt="setting" />
         </div>
-        <div class="trust-store-heading" style="position: relative">
+        <div class="Manage-certificate-heading" style="position: relative">
           Manage Certificates
         </div>
       </div>
@@ -124,7 +123,7 @@
       </div> -->
       <!-- <div class="bottom-style-index"></div> -->
     </div>
-    <script src="ManageCertificate.js"></script>
-    <script src="/index.js"></script>
+    <script src="./ManageCertificate.js"></script>
+    <script src="../../index.js"></script>
   </body>
 </html>
