--- a/src/pages/LoginPage/LoginPage.css
+++ b/src/pages/LoginPage/LoginPage.css
@@ -34,7 +34,9 @@
   font-size: 40px;
   line-height: 120%;
   letter-spacing: -0.8px;
-  color: #fffff5;
+  color: var(--fonts-icons-01, var(--text-01, #fffff5));
+  font-style: normal;
+  font-weight: 400;
 }
 
 .login-field-container {
