--- a/src/pages/Onbording/OnBordingPage.css
+++ b/src/pages/Onbording/OnBordingPage.css
@@ -9,13 +9,27 @@
 }
 
 #onBording-page-heading {
-  color: white;
+  color: var(--fonts-icons-01, var(--text-01, #fffff5));
+
+  /* Onboarding/Titles/H1 Reg 40 - 120% */
+  /* font-family: "Aeonik TRIAL"; */
   font-size: 40px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%; /* 48px */
+  letter-spacing: -0.8px;
 }
 
 #onBording-page-text {
-  color: white;
-  font-size: 24px;
+  color: var(--fonts-icons-02, var(--text-02, #a3a393));
+
+  /* Onboarding/Body/Body L Reg 16 - 120% */
+  /* font-family: "Aeonik TRIAL"; */
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%; /* 19.2px */
+  letter-spacing: -0.304px;
 }
 
 #onBording-page-underline-text {
@@ -32,9 +46,14 @@
   border-radius: 16px;
   border: none;
   margin-top: 56px;
-  font-weight: 700;
-  font-size: 16px;
   cursor: pointer;
+  /* Onboarding/Body/Body L Bold 16 - 120% */
+  /* font-family: "Aeonik TRIAL"; */
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%; /* 19.2px */
+  letter-spacing: -0.304px;
 }
 
 .onbording-Ellipses {
@@ -64,6 +83,18 @@
   width: 50%;
   position: relative;
   overflow: hidden;
+}
+
+.onBording-page-left-container-bottom-style {
+  position: absolute;
+  top: 0px;
+  /* width: 717px;
+  height: 717px; */
+  transform: rotate(90deg);
+  /* fill: rgba(255, 255, 255, 0.01); */
+  stroke-width: 1px;
+  stroke: #fff;
+  /* backdrop-filter: blur(32px); */
 }
 
 @media screen and (max-width: 900px) {
@@ -102,12 +133,28 @@
     width: 100%;
   }
   #onBording-page-heading {
-    font-size: 30px;
+    color: var(--fonts-icons-01, var(--text-01, #fffff5));
+
+    /* Onboarding/Titles/H1 Reg 40 - 120% */
+    font-family: "Aeonik TRIAL";
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 120%; /* 48px */
+    letter-spacing: -0.8px;
   }
 
   #onBording-page-text {
-    color: white;
-    font-size: 20px;
+    /* color: var(--fonts-icons-02, var(--text-02, #a3a393)); */
+    color: #f4f85a;
+
+    /* Onboarding/Body/Body L Reg 16 - 120% */
+    font-family: "Aeonik TRIAL";
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 120%; /* 19.2px */
+    letter-spacing: -0.304px;
   }
 
   #onBording-page-underline-text {
