--- a/src/components/ImportWalletSeed.js/ImportWalletSeed.css
+++ b/src/components/ImportWalletSeed.js/ImportWalletSeed.css
@@ -1,5 +1,6 @@
 .ImportWalletSeed-main-comntainer {
   background: var(--background, #121212);
+  height: 100vh;
 }
 
 .ImportWalletSeed-side-ellipse {
