--- a/src/components/VerifySeedPhrase/VerifySeedPhrase.css
+++ b/src/components/VerifySeedPhrase/VerifySeedPhrase.css
@@ -1,5 +1,6 @@
 .verifySeedPhrase-main-comntainer {
   background: var(--background, #121212);
+  height: 100vh;
 }
 
 .verifySeedPhrase-side-ellipse {
