--- a/src/components/signupUrbitID/SignupUrbit.css
+++ b/src/components/signupUrbitID/SignupUrbit.css
@@ -2,6 +2,7 @@
   position: relative;
   background-color: #121212;
   overflow: hidden;
+  height: 100vh;
 }
 .signup-urbit-side-ellipse {
   width: 335px;
